syntax = "proto3";

package agentmanager;

service AgentManagerService {
  rpc CreateAgent(CreateAgentRequest) returns (CreateAgentResponse);
  
  rpc GetAgentStatus(GetAgentStatusRequest) returns (AgentStatusResponse);
  
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
  
  rpc StopAgent(StopAgentRequest) returns (StopAgentResponse);
  
  rpc StreamAgentEvents(StreamAgentEventsRequest) returns (stream AgentEvent);
}

message CreateAgentRequest {
  string contest_id = 1;
  string participant_id = 2;
  string model_name = 3;
  string contest_manager_host = 4;
  
  optional float temperature = 5;
  optional int32 max_tokens = 6;
  optional float timeout = 7;
}

message CreateAgentResponse {
  string agent_id = 1;
  string contest_id = 2;
  string participant_id = 3;
  string model_name = 4;
  AgentStatus status = 5;
  string message = 6;
}

message GetAgentStatusRequest {
  string agent_id = 1;
}

message AgentStatusResponse {
  string agent_id = 1;
  string contest_id = 2;
  string participant_id = 3;
  string model_name = 4;
  AgentStatus status = 5;
  int32 problems_solved = 6;
  int32 problems_attempted = 7;
  string current_problem = 8;
  int64 started_at = 9; // Unix timestamp
  optional int64 completed_at = 10; // Unix timestamp
  string error_message = 11;
}

message ListAgentsRequest {
  optional string contest_id = 1;
  optional AgentStatus status = 2; 
}

message ListAgentsResponse {
  repeated AgentStatusResponse agents = 1;
}

message StopAgentRequest {
  string agent_id = 1;
  string reason = 2;
}

message StopAgentResponse {
  string agent_id = 1;
  bool success = 2;
  string message = 3;
}

message StreamAgentEventsRequest {
  string agent_id = 1;
}

message AgentEvent {
  string agent_id = 1;
  string event_type = 2;
  string message = 3;
  int64 timestamp = 4;
  map<string, string> metadata = 5;
}

enum AgentStatus {
  AGENT_STATUS_UNKNOWN = 0;
  AGENT_STATUS_INITIALIZING = 1;
  AGENT_STATUS_RUNNING = 2;
  AGENT_STATUS_COMPLETED = 3;
  AGENT_STATUS_FAILED = 4;
  AGENT_STATUS_STOPPED = 5;
}
